Fix: Them thu muc learning_ros

--- a/ros2_f1tenth_basic/CMakeLists.txt
+++ b/ros2_f1tenth_basic/CMakeLists.txt
@@ -1,48 +1,89 @@
 cmake_minimum_required(VERSION 3.8)
-project(ros2_f1tenth_basic)
+project(motor_control)
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
-
-
-# find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(dynamixel_sdk REQUIRED)
+find_package(rcutils REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(ackermann_msgs REQUIRED)
+# find_package(ackermann_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
-find_package(rosbasic_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 
-install(PROGRAMS
-  learning_ros/publisher.py    # tao folder: lib , goi ros_publisher.py
-    # tao folder: lib , goi ros_subscriber.py
-  
-  learning_ros/move_robot.py
-  learning_ros/service.py
-  learning_ros/client.py
-  learning_ros/transform.py
-  learning_ros/break.py
-  learning_ros/safety.py
-  Visual/visual.py
-  learning_ros/chay2m.py
-  learning_ros/go_lai.py
-  learning_ros/go_lai_2.py
+
+
+
+install(PROGRAMS 
+  src/simple_odom_tb3.py
+  src/tb3_wheel_odometry.py
+  src/on_lai_sub.py
+  src/on_lai_pub.py
+  src/service_server.py
+  src/service_client.py
+  src/sub_odom.py
+  src/pp_basic.py
+  src/stanley.py
+  src/optimized_pp.py
+
+
 
 
   DESTINATION lib/${PROJECT_NAME})  
 
 
-install(DIRECTORY config launch
-  DESTINATION share/${PROJECT_NAME})
 
 
-install(DIRECTORY config launch
-  DESTINATION share/${PROJECT_NAME}
+include_directories(
+  include
+  ${dynamixel_sdk_INCLUDE_DIRS}
 )
 
+add_executable(main_test
+  src/main.cpp
+  src/dynamixel_sdk_wrapper.cpp
+)
+
+add_executable(talker src/pub_cpp.cpp)
+ament_target_dependencies(talker rclcpp std_msgs)
+
+# 3. Định nghĩa file chạy cho Subscriber
+add_executable(listener src/sub_cpp.cpp)
+ament_target_dependencies(listener rclcpp std_msgs)
+
+add_executable(robot_news src/robot_new.cpp)
+ament_target_dependencies(robot_news rclcpp std_msgs)
+
+
+
+
+ament_target_dependencies(main_test
+  rcutils
+    # nếu bạn có dùng ROS2 node
+)
+# === 1. THÊM ĐỂ CÀI ĐẶT FILE LAUNCH ===
+# Lệnh này sẽ copy toàn bộ thư mục 'launch' vào 'install/share/motor_control/launch'
+install(DIRECTORY
+  launch/
+  DESTINATION share/${PROJECT_NAME}/launch
+)
+
+# === 2. THÊM ĐỂ CÀI ĐẶT FILE CONFIG ===
+# Lệnh này sẽ copy toàn bộ thư mục 'config' vào 'install/share/motor_control/config'
+install(DIRECTORY
+  config/
+  DESTINATION share/${PROJECT_NAME}/config
+)
+
+target_link_libraries(main_test ${dynamixel_sdk_LIBRARIES})
+
+install(TARGETS main_test talker
+  listener
+  robot_news
+
+
+DESTINATION lib/${PROJECT_NAME})
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   set(ament_cmake_copyright_FOUND TRUE)
