--- a/ros2_f1tenth_basic/package.xml
+++ b/ros2_f1tenth_basic/package.xml
@@ -19,7 +19,7 @@
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
-  
+  <depend>ackermann_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
